# Bricky

./: .gitignore  README.md  pyproject.toml
backend/: db.sqlite3  manage.py
backend/bricky/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/core/migrations/: 0001_contact_message.py  0001_initial.py  0002_rename_core_contactm_email_idx_core_contac_email_cfac76_idx_and_more.py  0003_newslettersubscription.py  0004_helpcategory_helparticle.py  0005_review.py
backend/core/templatetags/: __init__.py  custom_filters.py
backend/notifications/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py
backend/orders/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_add_order_uuid.py  0002_initial.py  0003_alter_order_status.py  0004_alter_order_status.py
backend/static/users/: email_verify.css  users.js
backend/store/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/store/migrations/: 0001_initial.py  0002_alter_category_picture.py  0002_initial.py  0003_cart_cartitem.py  0004_product_status.py
backend/users/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  (+1 more)
bricky/: urls.py
core/: urls.py  views.py
notifications/: urls.py
orders/: apps.py  signals.py  urls.py
static/users/: users.css  users.js
store/: urls.py  views.py
tgbot/: bot.py
users/: urls.py  views.py
(+96 files in other folders)
